  to Pavel Konnikov and Herman van Rink
+ patch #2974341 [structure] Clicking on table name in db Structure should 
  Browse the table if possible, thanks to bhdouglass - dougboybhd
+ patch #2975533 [search] New search operators, thanks to
  Martynas Mickevičius
+ patch #2967320 [designer] Colored relations based on the primary key,
  thanks to GreenRover - greenrover

3.3.2.0 (not yet released)
- patch #2969449 [core] Name for MERGE engine varies depending on the
  MySQL version, thanks to Dieter Adriaenssens - ruleant
- bug #2966078 [browse] Incorrect LIMIT is saved and sticks while browsing
- bug #2967366 [Structure] Some results of Propose table structure are
  shown in hex
- bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
- [navi] Changed link to git repository on main page
- bug #2972232 [menu] Import menu tab not present on main page
- patch #2976790 [menu] Go to the upper level after table DROP,
  thanks to Kaarel Nummert - kaarelnu
- patch #2978815 [pdf] Fix generating PDF with table dimensions, thanks to BlinK_
- patch #2977725 [export] XML wrongly encoded, thanks to Victor Volkov - hanut

3.3.1.0 (2010-03-16)
- bug #2941037 [core] Database structure not sorted by table correctly 
- bug #2948492 [interface] Slide effect masks some fields on search page
- bug #2959746 [interface] Unknown table status: TABLE_TYPE 
- bug #2953050 [export] export VIEW as SQL includes INSERT statement 
- bug #2942032 [core] Cannot detect PmaAbsoluteUri correctly on Windows 
- bug #2961609 [auth] Potential information disclosure at login page
- patch #2961540 [export] Do not export data of MERGE table,
  thanks to Dieter Adriaenssens - ruleant
- bug #2961198 [parser] Querying a table named "data"
- bug #2931429 [structure] Editing long triggers
- bug #2970769 [structure] Incorrect reference to mootools-more.js 

3.3.0.0 (2010-03-07)
+ rfe #2308632 [edit] Use hex for (var)binary fields,
  thanks to Maarten Dieleman - maartendieleman