@@ -34,4 +34,25 @@ define('SETUP_CONFIG_FILE', './config/config.inc.php');
  */
 define('SETUP_DIR_WRITABLE', true);
 
+/**
+ * Directory where configuration files are stored.
+ * It is not used directly in code, just a convenient
+ * define used further in this file.
+ */
+define('CONFIG_DIR', './');
+
+/**
+ * Filename of a configuration file.
+ */
+define('CONFIG_FILE', CONFIG_DIR . 'config.inc.php');
+
+/**
+ * Filename of custom header file.
+ */
+define('CUSTOM_HEADER_FILE', CONFIG_DIR . 'config.header.inc.php');
+
+/**
+ * Filename of custom footer file.
+ */
+define('CUSTOM_FOOTER_FILE', CONFIG_DIR . 'config.footer.inc.php');
 ?>
