@@ -7,12 +7,14 @@
  * @package phpMyAdmin
  */
 
+require './libraries/vendor_config.php';
+
 echo "Starting to parse config file...\n";
 
 error_reporting(E_ALL);
 /**
  * Read config file.
  */
-require './config.inc.php';
+require CONFIG_FILE;
 
 ?>
